// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#gremlins/gremlins/checkbox/field <Field /> With additional props renders 1`] = `
[
  <input
    className="MOCK CLASSNAME"
    disabled={true}
    id="MOCK ID"
    name="MOCK NAME"
    onChange={[Function]}
    onClick={[Function]}
    readOnly={true}
    required={true}
    type="checkbox"
    value="MOCK VALUE"
  />,
  <label
    htmlFor="MOCK ID"
  >
    ​
  </label>,
]
`;

exports[`#gremlins/gremlins/checkbox/field <Field /> With required props renders 1`] = `
[
  <input
    className="MOCK CLASSNAME"
    disabled={false}
    name="MOCK NAME"
    onChange={[Function]}
    onClick={[Function]}
    readOnly={false}
    required={false}
    type="checkbox"
    value="MOCK VALUE"
  />,
  <label>
    ​
  </label>,
]
`;
